--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -7,12 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    {% for task in tasks %}
-        {{task.task_name}}
-        {{task.category_name}}
-        {{task.task_description}}
-        {{task.is_urgent}}
-        {{task.due_date}}
-    {% endfor %}
+    {% extends 'base.html' %}
+    {% block content %}
+
+        {% for task in tasks %}
+            {{task.task_name}}
+            {{task.category_name}}
+            {{task.task_description}}
+            {{task.is_urgent}}
+            {{task.due_date}}
+        {% endfor %}
+
+    {% endblock %}
 </body>
 </html>
