--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,38 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+
     {% extends 'base.html' %}
     {% block content %}
 
-        {% for task in tasks %}
-            {{task.task_name}}
-            {{task.category_name}}
-            {{task.task_description}}
-            {{task.is_urgent}}
-            {{task.due_date}}
-        {% endfor %}
+        <ul class="collapsible" data-collapsible="accordion">
+            {% for task in tasks %}
 
-         <ul class="collapsible">
             <li>
-                <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+
+                <div class="collapsible-header">
+                    <div class = "task_header col s9">
+                        <i class="material-icons">expand_more</i>
+                        <strong>{{task.task_name}}</strong> - {{task.due_date}}
+                    </div>
+                </div>
+
+                <div class="collapsible-body">
+                    <span>
+                        {{task.task_description}}
+                    </span>
+                </div>
+
             </li>
-            <li>
-                <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-            <li>
-                <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
+            
+            {% endfor %}
         </ul>
 
     {% endblock %}
-</body>
-</html>
