Add task form input fields

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,20 @@
         $(document).ready(function(){
             $('.collapsible').collapsible();
         });
+
+        $('.datepicker').pickadate({
+            selectMonths: true, // Creates a dropdown to control month
+            selectYears: 15, // Creates a dropdown of 15 years to control year,
+            today: 'Today',
+            clear: 'Clear',
+            close: 'Ok',
+            closeOnSelect: false // Close upon selecting a date,
+        });
+        
+        document.getElementById("matfix").addEventListener("click", function(e) {
+	        e.stopPropagation();
+        });
     </script>
+    
 </body>
 </html>
