--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -1,21 +1,49 @@
  {% extends 'base.html' %}
     {% block content %}
 
+        <!-- Start form: Add task -->
         <h3>Add Task</h3>
          <div class="row">
             <form action="" method="POST" class="col s12">
+
+                <!-- Task name -->
                 <div class="row">
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">account_circle</i>
-                        <input id="icon_prefix" type="text" class="validate">
-                        <label for="icon_prefix">First Name</label>
-                    </div>
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">phone</i>
-                        <input id="icon_telephone" type="tel" class="validate">
-                        <label for="icon_telephone">Telephone</label>
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">assignment</i>
+                        <input id="task_name" name="task_name" type="text" class="validate">
+                        <label for="icon_assignment">Task Name</label>
                     </div>
                 </div>
+
+                <!-- Task description -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">subject</i>
+                        <textarea id="task_description" name="task_description" class="materialize-textarea"></textarea>
+                        <label for="icon_subject">Task Description</label>
+                    </div>
+                </div>
+
+                <!-- Date picker -->
+                 <div id="matfix" class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">today</i>
+                        <input id="due_date" name="due_date" type="text" class="datepicker">
+                        <label for="icon_prefix">Due Date</label>
+                    </div>
+                </div>
+
+                <!-- Switch: is urgent? -->
+                <div class="row">
+                    <div class="switch">
+                        <label>
+                        <input id="is_urgent" name="is_urgent" type="checkbox">
+                        <span class="lever"></span>
+                        Is Urgent
+                        </label>
+                    </div>
+                </div>
+
             </form>
         </div>
 
