--- a/templates/base.html
+++ b/templates/base.html
@@ -5,24 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>base</title>
+    <title>Base</title>
 
+    <!-- Fonts/Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
 </head>
 <body>
-     <h1>Outside!</h1>
+     <h2>Kika Task Manager</h2>
         {% block content %}
         {% endblock %}
 
+    <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Materialize JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- Js Functions -->
     <script type="text/javascript">
+        
         $(document).ready(function(){
+            // Js Collapsible Accordion
             $('.collapsible').collapsible();
+            // Js Select
+            $('select').material_select();
         });
 
+        // Js Date Picker
         $('.datepicker').pickadate({
             selectMonths: true, // Creates a dropdown to control month
             selectYears: 15, // Creates a dropdown of 15 years to control year,
@@ -31,7 +41,8 @@
             close: 'Ok',
             closeOnSelect: false // Close upon selecting a date,
         });
-        
+
+        // Js Date Picker: Google Chrome Fix
         document.getElementById("matfix").addEventListener("click", function(e) {
 	        e.stopPropagation();
         });
