--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -4,7 +4,7 @@
         <!-- Start form: Add task -->
         <h3>Add Task</h3>
          <div class="row">
-            <form action="" method="POST" class="col s12">
+            <form action="{{ url_for('insert_task' ) }}" method="POST" class="col s12">
 
                 <div class="input-field col s12">
                 <i class="material-icons prefix">poll</i>
@@ -55,6 +55,14 @@
                         Is Urgent
                         </label>
                     </div>
+                </div>
+
+                <!-- Submit Button -->
+                <div class="row">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">
+                        Add Task
+                        <i class="material-icons right">playlist_add</i>
+                    </button>
                 </div>
 
             </form>
