Add Edit and Done Button to task list on task.html

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -7,21 +7,27 @@
 
             <li>
 
+                <!-- Task List: Edit and Done Buttons -->
                 <div class="collapsible-header">
-                    <div class = "task_header col s9">
+
+                    <div class="col s3">
                         <i class="material-icons">expand_more</i>
+                        <a class="waves-effect waves-light btn btn_small">Done</a>
+                        <a class="waves-effect waves-light btn btn_small blue">Edit</a>
+                    </div>
+                    
+                    <div class = "task_header col s9">
                         <strong>{{task.task_name}}</strong> - {{task.due_date}}
                     </div>
+
                 </div>
 
                 <div class="collapsible-body">
-                    <span>
-                        {{task.task_description}}
-                    </span>
+                    <span>{{task.task_description}}</span>
                 </div>
 
             </li>
-            
+
             {% endfor %}
         </ul>
 
