--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,11 @@
-body{
-    background-color: #DFE1CA;
+.btn_small {
+    height: 24px;
+    width: 60px;
+    line-height: 24px;
+    margin: 5px 5px;
+    padding: 0 0.5em;
+}
+
+.task_header {
+    margin-top: 10px;
 }
