--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,11 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css"/>
 </head>
 <body>
+<div class="container">
      <h2>Kika Task Manager</h2>
         {% block content %}
         {% endblock %}
+</div>
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
