--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -12,7 +12,11 @@
                         <option value="" disabled selected>Choose Category</option>
                         
                         {% for cat in categories %}
-                        <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                            {% if cat.category_name == task.category_name %}
+                                <option value="{{cat.category_name}}" selected >{{cat.category_name}}</option>
+                            {% else %}
+                                <option value="{{cat.category_name}}"  >{{cat.category_name}}</option>
+                            {% endif %}
                         {% endfor %}
                         
                     </select>
@@ -23,7 +27,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">assignment</i>
-                        <input id="task_name" name="task_name" type="text" class="validate">
+                        <input id="task_name" name="task_name" type="text" class="validate" value="{{ task.task_name }}">
                         <label for="icon_assignment">Task Name</label>
                     </div>
                 </div>
@@ -32,7 +36,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">subject</i>
-                        <textarea id="task_description" name="task_description" class="materialize-textarea"></textarea>
+                        <textarea id="task_description" name="task_description" class="materialize-textarea">{{ task.task_description }}</textarea>
                         <label for="icon_subject">Task Description</label>
                     </div>
                 </div>
@@ -50,9 +54,13 @@
                 <div class="row">
                     <div class="switch">
                         <label>
-                        <input id="is_urgent" name="is_urgent" type="checkbox">
-                        <span class="lever"></span>
-                        Is Urgent
+                            {% if task.is_urgent %}
+                                <input id="is_urgent" name="is_urgent" type="checkbox" checked>
+                            {% else %}
+                                <input id="is_urgent" name="is_urgent" type="checkbox">
+                            {% endif %}
+                                <span class="lever"></span>
+                                Is Urgent
                         </label>
                     </div>
                 </div>
@@ -60,12 +68,22 @@
                 <!-- Submit Button -->
                 <div class="row">
                     <button class="btn waves-effect waves-light" type="submit" name="action">
-                        Add Task
+                        Edit Task
                         <i class="material-icons right">playlist_add</i>
                     </button>
                 </div>
 
             </form>
         </div>
+
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Custom Js for Date Picker -->
+    <script type="text/javascript">
+        $(document).ready(function(){
+            due_date = Date.parse('{{task.due_date}}');
+            $('#due_date').pickadate('picker').set('select', due_date, {format: 'dd/mm/yyyy'}).trigger('change')
+        });
+    </script>
 
     {% endblock %}
