--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -4,7 +4,7 @@
         <!-- Start form: Add task -->
         <h3>Edit Task</h3>
          <div class="row">
-            <form action="{{ url_for('edit_task', task_id=task._id) }}" method="POST" class="col s12">
+            <form action="{{ url_for('update_task', task_id=task._id) }}" method="POST" class="col s12">
 
                 <div class="input-field col s12">
                 <i class="material-icons prefix">poll</i>
