--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -1,7 +1,7 @@
  {% extends 'base.html' %}
     {% block content %}
 
-        <!-- Start form: Add task -->
+        <!-- Start form: Edit task -->
         <h3>Edit Task</h3>
          <div class="row">
             <form action="{{ url_for('update_task', task_id=task._id) }}" method="POST" class="col s12">
