--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -12,6 +12,7 @@
             <label for="category_name">Category Name</label>
         </div>
     </div>
+    <!-- Button: Add Category -->
     <div class="row">
         <button class="btn waves-effect waves-light" type="submit" name="action">Add Category
             <i class="material-icons right">playlist_add</i>
