--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,30 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css"/>
 </head>
 <body>
-<div class="container">
-     <h2>Kika Task Manager</h2>
+    <!-- Nav -->
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="{{url_for('get_tasks')}}" class="brand-logo">Kika Task Manager</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="{{url_for('get_tasks')}}">Home</a></li>
+                    <li><a href="{{url_for('add_task')}}">New Task</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="{{url_for('get_tasks')}}">Home</a></li>
+                    <li><a href="{{url_for('add_task')}}">New Task</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- Site Name / Template Block -->
+    <div class="container">
         {% block content %}
         {% endblock %}
-</div>
-
+    </div>
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Materialize JS -->
@@ -47,7 +65,7 @@
 
         // Js Date Picker: Google Chrome Fix
         document.getElementById("matfix").addEventListener("click", function(e) {
-	        e.stopPropagation();
+            e.stopPropagation();
         });
     </script>   
 </body>
